# hffp

./: artfulD_guardD_ex5.hs  bpContents.txt  peng_ex2.hs
ch11w/: binaryTree.hs  ex_1dog.hs  ex_2vehicle.hs  ex_3_11_8.hs  ex_4goats.hs  ex_5garden.hs  ex_6_11_5.hs  notes.txt  things_to_discuss.txt
ch12w/: chex.hs
ch13/hangman/: hangman.cabal
ch13/hangman/.stack-work/install/x86_64-osx/lts-11.10/8.2.2/flag-cache/: HUnit-1.6.0.0-Co0VFs8PjIYJtvd3iwPPg  QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  ansi-terminal-0.8.0.4-H5HxnxNyY9rFpSVgr55Piv  call-stack-0.1.0-BVjoAlBRe9FCSr5eFfllei  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  hspec-2.4.8-GNfo1AULo4CCp5wGUQFKlc  hspec-core-2.4.8-4Erj4ZvBoXw1nGDhVdu5Mk  hspec-discover-2.4.8-LTGHxW3iGukBkZGh8Wfshc  hspec-expectations-0.8.2-u0Nf5sZGE0ADGpjIcTPpI  primitive-0.6.3.0-CXy1O9sQYlI58rn9KQkFyo  quickcheck-io-0.2.0-7UgsC7t0mA24u70xSNYJWt  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  setenv-0.1.1.3-4FEJPUU51wbJmlhCSZScDf  split-0.2.3.3-69JBPqG5rhJEaFzFyiVOGW  stm-2.4.5.0-15FdumhhnVEKazIoQZDzp1  tf-random-0.5-H0EZh6X3duX25gCCL9n0I3
ch13/hangman/src/: Main.hs
ch15/: FirstMappend.hs  MOptional.hs  Madlibbin.hs  chex_semigroup.hs  notes.txt
ch2/: chapterExercisesEQ.hs
ch3/: exercises.hs  scope.hs  syntax_errors.hs
ch4/: Ch4CorrSynt.hs  MoodSwing.hs
ch5/: ApplyYourself_ch5.hs  Ch5Exercises.hs  Ch5Param.hs  Ch5questions.txt  fixIt_arith.hs  fixIt_sing.hs
ch6/: EqInstance_1.hs  exercises_2.hs  notes.txt
ch7/: arith4.hs  artfulD_guardD_ex5.hs  casePractice_ex4.hs  ex1_grabBag.hs  ex6.hs  varietyPack_ex3.hs
ch8/: chExercises.hs  wordNum.hs
(+18 files in other folders)
